--- a/DL pairs.ipynb
+++ b/DL pairs.ipynb
@@ -10,32 +10,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "44bc9bb4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "# pip install pandas==1.4.3\n",
-    "def pickle_klines(data=None):\n",
-    "    w = ['rb' if data is None else 'wb'][0]\n",
-    "    with open(f'./database/BTCUSDT_ETHUSDT_futures.pickle', w) as handle:\n",
-    "        if data is None:\n",
-    "            data = pickle.load(handle)\n",
-    "            return data\n",
-    "        else: \n",
-    "            pickle.dump(data, handle)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "078e0448",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pickle_klines(data=results)\n",
-    "data= pickle_klines()"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from datetime import datetime as dt\n",
+    "from datetime import timedelta\n",
+    "import time\n",
+    "\n",
+    "from data.data_management import DataManager\n",
+    "\n",
+    "config = {\"general\":{\"db_update\": False,\n",
+    "                     \"db_path\": \"D:/OneDrive/database/\",\n",
+    "                     \"output\": \"telegram/\"},\n",
+    "          \"strategy\": {\"instruments\":[\"ftx_BTC/USD\",\n",
+    "                                      \"ftx_ETH/USD\",\n",
+    "                                      # \"ftx_SOL/USD\",\n",
+    "                                      # \"ftx_FTT/USD\",\n",
+    "                                      # \"ftx_FTM/USD\",\n",
+    "                                      # \"ftx_TSM/USD\",\n",
+    "                                      # \"ftx_NVDA/USD\",\n",
+    "                                      # \"ftx_AMD/USD\",\n",
+    "                                      # \"ftx_TSLA/USD\",\n",
+    "                                      ],\n",
+    "                       \"timeframes\": [\"1h\",\"2h\",\"3h\",\"4h\",\"6h\",\"12h\",\"24h\", \"48h\"],\n",
+    "                       \"indicators\": {'tide': {'window': [12,24,72], \"sensitivity\": [90], \"thresholds\": [10]},\n",
+    "                                      # 'ema': {'length': [13,21,34,55], 'close': ['close']}, \n",
+    "                                      'mfi': {'length': [5,8,13,21,34,55], 'close': ['close']},\n",
+    "                                      # 'slopes': {'slope_lengths':[7,10,14,20,28,40,56,80],\n",
+    "                                      #           'scaling_factor':[1],\n",
+    "                                      #           'lookback':[500],\n",
+    "                                      #            'logRet_norm_window':[10],\n",
+    "                                      #           'upper_quantile':[0.9]}\n",
+    "                                      },\n",
+    "                       \"resample\": True\n",
+    "                      },\n",
+    "\n",
+    "          }\n",
+    "\n",
+    "\n",
+    "\n",
+    "data_manager = DataManager(instruments = config[\"strategy\"][\"instruments\"],\n",
+    "                           db_path = config[\"general\"][\"db_path\"],\n",
+    "                           update_db = config[\"general\"][\"db_update\"],\n",
+    "                           timeframes = config[\"strategy\"][\"timeframes\"],\n",
+    "                           indicators = config[\"strategy\"][\"indicators\"],\n",
+    "                           resample = config[\"strategy\"][\"resample\"],\n",
+    "                           )\n",
+    "\n",
+    "klines_indicators_dict =  data_manager.load_data()\n",
+    "\n",
+    "for instrument,df in klines_indicators_dict.items():\n",
+    "    print(f\"{instrument}: {df.index[0]} ----> {df.index[-1]}, len: {len(df)}\")\n",
+    "    \n",
+    "# Select one\n",
+    "df0 = klines_indicators_dict[\"ftx_BTC/USD\"].copy()"
    ]
   },
   {
